const en = {
  newWorkout: 'New workout',
  addExercise: 'Add exercise',
  addSuperset: 'Add superset',
  selectExercise: 'Select exercise',
  selectExercises: 'Select exercises',
  selectedCount: '{{count}} selected',
  copyWorkout: 'Copy workout',
  completeSet: 'Complete set',
  startRest: 'Start rest',
  endRest: 'End rest',
  search: 'Search',
  reps: 'reps',
  weight: 'weight',
  distance: 'distance',
  duration: 'duration',
  durationMinutes: 'minutes',
  updateSet: 'Update set',
  remove: 'Remove',
  calendar: 'Calendar',
  save: 'Save',
  cancel: 'Cancel',
  confirm: 'Confirm',
  editRestTimer: 'Edit Rest Timer',
  createExercise: 'Create exercise',
  editExercise: 'Edit exercise',
  switchExercise: 'Switch exercise',
  removeFromWorkout: 'Remove from workout',
  showGraph: 'Show graph',
  hideGraph: 'Hide graph',
  changesWillBeLost: 'Any changes made will be lost.',
  warning: 'Warning',
  done: 'Done',
  workoutComments: 'Workout comments',
  enterComments: 'Enter comments...',
  howWasWorkout: 'How was the workout?',
  goToWorkout: 'Go to workout',
  noSetsEntered: 'No sets entered',
  historyLogEmpty: 'History Log Empty',
  recordsLogEmpty: 'Records Log Empty',
  workoutLogEmpty: 'Workout Log Empty',
  exportData: 'Export data',
  restoreData: 'Restore data',
  noWorkoutsEntered: 'No workouts entered yet',
  noFavoriteExercises: 'No favorite exercises set',
  favorite: 'Favorite',
  mostUsed: 'Most used',
  allExercises: 'All Exercises',
  track: 'Track',
  history: 'History',
  records: 'Records',
  chart: 'Chart',
  distanceMeasurementSettings: 'Distance Measurement Settings',
  weightMeasurementSettings: 'Weight Measurement Settings',
  durationMeasurementSettings: 'Duration Measurement Settings',
  unit: 'Unit',
  rest: 'Rest',
  removeWorkout: 'Remove workout',
  muscles: 'Muscles',
  muscleAreas: 'Muscle areas',
  viewComment: 'View comment',
  addComment: 'Add comment',
  includeSets: 'Include sets',
  selectExerciseForStats: 'Select exercise to view stats',
  selectExerciseForEdit: 'Select exercise to log your work',
  selectExerciseForData: 'Select an exercise to view data',
  saveAsTemplate: 'Save as template',
  saveTemplate: 'Save template',
  workoutWillNotBeSaved: 'Workout will not be saved.',
  useTemplate: 'Use template',
  selectTemplate: 'Select template',
  templateWillBeDeleted: 'Template will be deleted.',
  exercises: 'Exercises',
  discomfort: 'Discomfort',
  addComments: 'Add comments ...',
  hideCommentsCard: 'Hide comments card',
  showCommentsCard: 'Show comments card',
  difficulty: 'Difficulty',
  diffValue: 'Diff: {{rpe}} / 10',
  seconds: 'Seconds',
  minutes: 'Minutes',
  hours: 'Hours',
  setAsFavorite: 'Set as favorite',
  removeFavorite: 'Remove from favorites',
  dataImportSuccess: 'Data successfully imported.',
  dataExportSuccess: 'Data successfully exported.',
  settings: 'Settings',
  appearance: 'Appearance',
  theme: 'Theme',
  dark: 'Dark',
  light: 'Light',
  auto: 'Auto',
  moreIsBetter: 'More is better',
  rpe: {
    5: 'Feels pretty easy, I could keep going for a while.',
    6: 'Starting to feel some effort, but still comfortable.',
    7: 'Getting tough now, but I can hang in there.',
    8: "This is hard, I'm pushing, but can still manage.",
    9: "Really tough, almost maxed out, I'm barely hanging on.",
    10: "All-out effort, I've got nothing left to give!",
  },
  measureRest: 'Measure rest',
  giveFeedback: 'Give feedback',
  comments: 'Comments',
  commentsLogEmpty: 'No workout comments entered.',
  welcome: 'Welcome',
  startGymworking: 'Start gymworking',
  templateSaved: 'Template saved.',
  copyWorkoutAlert: 'Please create at least 1 workout first.',
  useTemplateAlert:
    'Please create at least 1 template first.\nYou can do so by saving a workout as a template.',
  speed: 'Speed',
  previewNextSet: 'Preview Next Set',
  scientificMuscleNames: 'Scientific Muscle Names',
  workoutDuration: 'Workout Duration',
  close: 'Close',
  stopTimer: 'Stop Timer',
  startTimer: 'Start Timer',
  shareWorkout: 'Share Workout',
  noWorkoutToShare: 'No workout to share',
  sharingFailed: 'Sharing Failed',
  startEmptyWorkout: 'Start Empty Workout',
  showWorkoutTimer: 'Show Workout Timer',
  showSetCompletion: 'Show Set Completion',
  instructions: 'Instructions',
  tips: 'Tips',
  exerciseDetails: 'Exercise Details',
  workoutsCount: '{{count}} Workouts',
  viewInstructions: 'View instructions'
}

export default en
export type Translations = typeof en
