...
            </View>
          ))}
        </View>
      </BottomDrawer>

      <FAB
        testID="add-step-fab"
        icon="plus"
        onTouchStart={expand}
        // onLongPress={addExercise}
        style={{ position: "relative" }}
      />
    </View>
...
