...
        style={{
          zIndex: 1,
          width: "100%",
        }}
      >
        <Searchbar
          testID="exercise-search"
          placeholder={translate("search")}
          value={filterString}
          onChangeText={setFilterString}
          mode="view"
          defaultValue={filterString}
          style={{ height: searchBarHeight }}
...
    },
    [selectedExercises],
  )

  return (
    <FlashList
      testID="exercise-list"
      data={exercises}
      renderItem={renderItem}
      keyExtractor={(exercise) => exercise.id!.toString()}
    />
  )
}
...
