...
        </SetEditPanelSection>
      )}

      {value.exercise?.hasMetricType("reps") && (
        <SetEditPanelSection text={translate("measurements.reps")}>
          <IncrementNumericEditor
            testID="set-edit-reps"
            value={value.reps}
            onChange={(reps) => onUpdate({ reps })}
            onSubmitEditing={() => onHandleSubmit(input1)}
            ref={input1}
            returnKeyType={isLastInput(input1) ? "default" : "next"}
            maxDecimals={0}
...
