...
  'Trapezius Middle Fibers': ['Middle-Trapezius'],
  'Trapezius Upper Fibers': ['Upper-Trapezius'],
  'Triceps Brachii': ['Triceps'],
  'Wrist Extensors': ['Wrist-Extensors', 'Forearms'],
  'Wrist Flexors': ['Wrist-Flexors', 'Forearms'],
  // New entries
  Abdominals: ['Rectus-Abdominis', 'Obliques', 'Core'],
  Abductors: ['Hip-Abductors'],
  Adductors: ['Hip-Adductors'],
  Arms: ['Biceps', 'Triceps', 'Upper-Arms', 'Forearms'],
  Back: ['Latissimus-Dorsi', 'Erector-Spinae', 'Teres Major', 'Trapezius'],
  Biceps: ['Biceps'],
  Calves: ['Gastrocnemius', 'Soleus'],
  Cardio: ['Cardio'],
  'Cardio-Functional': ['Cardio', 'Full-Body'],
  Chest: ['Pectoralis-Major-Clavicular', 'Pectoralis-Major-Sternocostal'],
...
